RESOLVED FIXED304836
[SVG] Fix bounding box computation for transformed clips
https://bugs.webkit.org/show_bug.cgi?id=304836
Summary [SVG] Fix bounding box computation for transformed clips
Ahmad Saleem
Reported 2026-01-01 18:02:14 PST
Hi Team, While going through Blink's commit, I noticed that we are failing this test in both LegacySVG and LBSE. Test Case: https://jsfiddle.net/1rtxL6kn/ ^ Passes on Chrome Canary 145 and Firefox Nightly 148. Fails on ToT (305044@main). Blink Commit: https://chromium.googlesource.com/chromium/src/+/d87f7dfaab3c3b75d7be1a3fcc51f7466d4a3582 Just raising, so we can track and fix it. Thanks!
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-01 18:02:36 PST
Ahmad Saleem
Comment 2 2026-01-01 18:30:35 PST
I think fixing in LBSE might not be straightforward and might be involved since we have other issues as well - https://bugs.webkit.org/show_bug.cgi?id=265135
Taher
Comment 3 2026-01-03 14:17:27 PST
EWS
Comment 4 2026-01-03 19:17:26 PST
Committed 305078@main (83bf26fdb1d1): <https://commits.webkit.org/305078@main> Reviewed commits have been landed. Closing PR #56046 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.