Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceClipper.cpp
@@ -308,7 +308,6 @@ void LegacyRenderSVGResourceClipper::calculateClipContentRepaintRect(RepaintRect
              continue;
         m_clipBoundaries[repaintRectCalculation].unite(renderer->localToParentTransform().mapRect(renderer->repaintRectInLocalCoordinates(repaintRectCalculation)));
     }
-    m_clipBoundaries[repaintRectCalculation] = clipPathElement().animatedLocalTransform().mapRect(m_clipBoundaries[repaintRectCalculation]);
 }
 
 bool LegacyRenderSVGResourceClipper::hitTestClipContent(const FloatRect& objectBoundingBox, const FloatPoint& nodeAtPoint)
@@ -325,14 +324,16 @@ bool LegacyRenderSVGResourceClipper::hitTestClipContent(const FloatRect& objectB
     if (!SVGRenderSupport::pointInClippingArea(*this, point))
         return false;
 
+    // The forward transform order is: OBB first, then local transform.
+    // So the inverse order is: inverse local first, then inverse OBB.
+    point = valueOrDefault(clipPathElement().animatedLocalTransform().inverse()).mapPoint(point);
+
     if (clipPathElement().clipPathUnits() == SVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX) {
         AffineTransform transform;
         transform.translate(objectBoundingBox.location());
         transform.scale(objectBoundingBox.size());
         point = valueOrDefault(transform.inverse()).mapPoint(point);
     }
-
-    point = valueOrDefault(clipPathElement().animatedLocalTransform().inverse()).mapPoint(point);
 
     for (Node* childNode = clipPathElement().firstChild(); childNode; childNode = childNode->nextSibling()) {
         RenderObject* renderer = childNode->renderer();
@@ -360,19 +361,21 @@ FloatRect LegacyRenderSVGResourceClipper::resourceBoundingBox(const RenderObject
         });
         return object.objectBoundingBox();
     }
-    
+
     if (m_clipBoundaries[repaintRectCalculation].isEmpty())
         calculateClipContentRepaintRect(repaintRectCalculation);
+
+    auto clipBoundaries = m_clipBoundaries[repaintRectCalculation];
 
     if (clipPathElement().clipPathUnits() == SVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX) {
         FloatRect objectBoundingBox = object.objectBoundingBox();
         AffineTransform transform;
         transform.translate(objectBoundingBox.location());
         transform.scale(objectBoundingBox.size());
-        return transform.mapRect(m_clipBoundaries[repaintRectCalculation]);
+        clipBoundaries = transform.mapRect(clipBoundaries);
     }
 
-    return m_clipBoundaries[repaintRectCalculation];
+    return clipPathElement().animatedLocalTransform().mapRect(clipBoundaries);
 }
 
 }
